# flask-template

./: .gitignore  README.md  config-example.json  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  extensions.py
app/auth/: helpers.py  routes.py
app/main/: routes.py
app/models/: user.py
app/static/: bootstrap.5.3.2.min.css  style.css
app/templates/: about.html  base.html  index.html  login.html  register.html  temp.html
website/: __init__.py  forms.py  models.py  routes.py
website/static/: style.css
website/templates/: about.html  home.html  layout.html  login.html  register.html
